# agentic_rag_with_langgraph

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/: techmart_catalog.csv  techmart_faq.csv  techmart_troubleshooting.csv
notebooks/: 01_basic_rag.ipynb  02_agentic_router_rag.ipynb  03_agentic_adaptive_rag copy 2.ipynb  03_agentic_adaptive_rag copy.ipynb  03_agentic_adaptive_rag.ipynb
utils/: ingest_data_in_separate_collections.py  ingest_data_in_single_collection.py
